// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainComponent renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />
        </View>,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isActionBarShown": undefined,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />
          </View>,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "isActionBarShown": undefined,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    isActionBarShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />
        </View>,
        <ActionBarComponent
          isSelectionMode={undefined}
          isSingleItemSelected={undefined}
          selectionModeActions={undefined}
          tapBarActions={undefined}
        />,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isActionBarShown": true,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isSelectionMode": undefined,
          "isSingleItemSelected": undefined,
          "selectionModeActions": undefined,
          "tapBarActions": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />
          </View>,
          <ActionBarComponent
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            selectionModeActions={undefined}
            tapBarActions={undefined}
          />,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "isActionBarShown": true,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "selectionModeActions": undefined,
            "tapBarActions": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    isSelectionMode={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={true}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />
        </View>,
        <ActionBarComponent
          isSelectionMode={true}
          isSingleItemSelected={undefined}
          selectionModeActions={undefined}
          tapBarActions={undefined}
        />,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={true}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isActionBarShown": undefined,
            "isSelectionMode": true,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isSelectionMode": true,
          "isSingleItemSelected": undefined,
          "selectionModeActions": undefined,
          "tapBarActions": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={true}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />
          </View>,
          <ActionBarComponent
            isSelectionMode={true}
            isSingleItemSelected={undefined}
            selectionModeActions={undefined}
            tapBarActions={undefined}
          />,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={true}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "isActionBarShown": undefined,
              "isSelectionMode": true,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isSelectionMode": true,
            "isSingleItemSelected": undefined,
            "selectionModeActions": undefined,
            "tapBarActions": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    isCreateBucketInputShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />
        </View>,
        null,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.4,
                },
              ]
            }
          />
          <CreateBucketPopUpComponent
            onApply={[Function]}
            onCancel={[Function]}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isActionBarShown": undefined,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ]
              }
            />,
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.4,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onApply": [Function],
              "onCancel": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />
          </View>,
          null,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ]
              }
            />
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "isActionBarShown": undefined,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "backgroundColor": "black",
                      "opacity": 0.4,
                    },
                  ]
                }
              />,
              <CreateBucketPopUpComponent
                onApply={[Function]}
                onCancel={[Function]}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onApply": [Function],
                "onCancel": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    isActionBarShown={true}
    isCreateBucketInputShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />
        </View>,
        <ActionBarComponent
          isSelectionMode={undefined}
          isSingleItemSelected={undefined}
          selectionModeActions={undefined}
          tapBarActions={undefined}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.4,
                },
              ]
            }
          />
          <CreateBucketPopUpComponent
            onApply={[Function]}
            onCancel={[Function]}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isActionBarShown": true,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "isSelectionMode": undefined,
          "isSingleItemSelected": undefined,
          "selectionModeActions": undefined,
          "tapBarActions": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ]
              }
            />,
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.4,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onApply": [Function],
              "onCancel": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />
          </View>,
          <ActionBarComponent
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            selectionModeActions={undefined}
            tapBarActions={undefined}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ]
              }
            />
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "isActionBarShown": true,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "selectionModeActions": undefined,
            "tapBarActions": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "backgroundColor": "black",
                      "opacity": 0.4,
                    },
                  ]
                }
              />,
              <CreateBucketPopUpComponent
                onApply={[Function]}
                onCancel={[Function]}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.4,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onApply": [Function],
                "onCancel": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
